# rpkCpp

./: .gitignore  CMakeLists.txt  README.md  callgraph.dot  rpkProfile
doc/: coreModelClasses.dot  man.txt
doc/html/: 0README  ChangeLog  authors.html  banner.html  bugs.html  changes.html  documentation.html  download.html  features.html  flags.html  footer.html  gallery.html  index.html  installation.html  intro.html  license.html  menu.html  prerequisites.html  template.html
doc/txt/: BREP_README  GDT_README  MGF_README  QMC_README  SGL_README
etc/: corridor.mgf  cube.mgf  floor_gloss.mgf  soda.mgf
etc/Materials/: dupont.mgf  munsell.mgf  objects.mgf
etc/hospital/: _timings.txt  blokken2.mgf  chair.mgf  coatrack.mgf  counter.mgf  desk.mgf  deur.mgf  deurbar.mgf  hosp.mgf  lampi.mgf  lampi2.mgf  lampi4.mgf  liftdeur.mgf  mug.mgf  orgchair.mgf  rectlight.mgf  redchair.mgf  shade.mgf  shades_box.mgf  squarelight.mgf  stoeltje.mgf  structure.mgf  tafeltje.mgf  window.mgf
etc/office2/: office2.mgf
etc/oficina001/: graz.mgf
etc/oficina003/: office.mgf
etc/salon/: classroom.mgf
scripts/: 01_runCube.sh  02_runCorridor.sh  03_runHospital.sh  04_runOffice1.sh  04_runOficina1.sh  05_runOffice2.sh  05_runOficina2.sh  06_runOffice3.sh  06_runOficina3.sh  07_runSalonDeClase.sh  08_runSoda.sh  08_soda.sh  10_floorRayMatting.sh  10_floorRaycasting.sh  11_floorRayCasting.sh  12_floorBidirectionalPathTracing.sh  13_floorStochasticRaytracingRandomWalk.sh  14_floorStochasticRaytracingJacobi.sh  21_tonemap_Ward.sh  22_tonemap_TumblinRushmeier.sh  ad2c.script  clean.sh  compile.sh  count.sh  makeCallGraph.sh  runAll.sh  search.sh  testReviewResults.sh
src/BREP/: BREP_CONTOUR.cpp  BREP_CONTOUR.h  BREP_EDGE.cpp  BREP_EDGE.h  BREP_FACE.cpp  BREP_FACE.h  BREP_SOLID.h  BREP_VERTEX.cpp  BREP_VERTEX.h  BREP_VERTEX_OCTREE.cpp  BREP_VERTEX_OCTREE.h  BREP_WING.cpp  BREP_WING.h  brep_log.cpp  brep_log.h
src/GALERKIN/: Element.h  GalerkinBasisType.h  GalerkinClusteringStrategy.h  GalerkinElement.cpp  GalerkinElement.h  GalerkinElementRenderMode.h  GalerkinErrorNorm.h  GalerkinIterationMethod.h  GalerkinRadianceMethod.cpp  GalerkinRadianceMethod.h  GalerkinRadiosity.cpp  GalerkinRadiosity.h  GalerkinRole.h  GalerkinShaftCullMode.h  GalerkinState.cpp  GalerkinState.h  GatheringClusteredStrategy.cpp  GatheringClusteredStrategy.h  GatheringSimpleStrategy.cpp  GatheringSimpleStrategy.h  GatheringStrategy.cpp  GatheringStrategy.h  Interaction.cpp  Interaction.h  LinkingClusteredStrategy.cpp  LinkingClusteredStrategy.h  LinkingSimpleStrategy.cpp  ShadowCache.cpp  ShadowCache.h  Shaft.cpp  Shaft.h  ShaftCullStrategy.h  ShaftPlane.h  ShaftPlanePosition.h  ShootingStrategy.cpp  ShootingStrategy.h  basisgalerkin.cpp  basisgalerkin.h  basisquadgalerkin.cpp  basistrigalerkin.cpp  (+30 more)
src/IMAGE/: ImageOutputHandle.cpp  ImageOutputHandle.h  adaptation.cpp  adaptation.h  dkcolor.cpp  dkcolor.h  dummy.cpp  dummy.h  imagec.cpp  imagec.h  imagecpp.h  lightness.cpp  lightness.h  pic.cpp  pic.h  ppm.cpp  ppm.h  tonemapping.cpp  tonemapping.h  trwf.cpp  trwf.h
src/MGF/: badarg.cpp  context.cpp  fvect.cpp  lookup.cpp  messages.h  object.cpp  parser.cpp  parser.h  words.cpp  words.h  xf.cpp
src/PHOTONMAP/: PhotonMapDCAcceptPDFType.h  PhotonMapDensityControlOption.h  PhotonMapImportanceOption.h  PhotonMapRadianceMethod.cpp  PhotonMapRadianceMethod.h  PhotonMapRadiosity.cpp  PhotonMapRadiosity.h  PhotonMapRadiosityMethod.cpp  RadiosityReturnOption.h  discretesampling.cpp  discretesampling.h  importancemap.cpp  importancemap.h  photon.cpp  photon.h  photonkdtree.cpp  photonkdtree.h  photonmap.cpp  photonmap.h  photonmapsampler.cpp  photonmapsampler.h  pmapP.h  pmapconfig.h  pmapimportance.cpp  pmapimportance.h  pmapoptions.cpp  pmapoptions.h  samplegrid.cpp  samplegrid.h  screensampler.cpp  screensampler.h  ui_pmap.cpp
src/QMC/: faure.cpp  faure.h  halton.cpp  halton.h  nied31.cpp  nied31.h  nied63.cpp  nied63.h  niederreiter.h  niederreiter.inc  scrambledhalton.cpp  scrambledhalton.h  sobol.cpp  sobol.h
src/SGL/: SglPixelContent.h  poly.h  poly_clip.cpp  poly_scan.cpp  poly_scan_flat.cpp  poly_scan_z.cpp  sgl.cpp  sgl.h  sgl_context.h
src/app/: BatchOptions.cpp  BatchOptions.h  Cluster.cpp  Cluster.h  GalerkinDebugRenderer.cpp  GalerkinDebugRenderer.h  LuminanceArea.h  RpkApplication.cpp  RpkApplication.h  adaptation.cpp  adaptation.h  batch.cpp  batch.h  cluster.h  clustergalerkin.cpp  commandLine.cpp  commandLine.h  compound.cpp  compound.h  fileopts.h  glutDebugTools.cpp  main.cpp  mainModel.cpp  mainModel.h  mainRendering.cpp  mainRendering.h  opengl.cpp  opengl.h  options.cpp  phong.cpp  phong.h  radiance.cpp  radiance.h  raytrace.cpp  raytrace.h  readmgf.cpp  rendercommon.cpp  sceneBuilder.cpp  sceneBuilder.h  ui.h  (+3 more)
src/common/: ColorRgb.cpp  ColorRgb.h  CppReAlloc.h  FileUncompressWrapper.cpp  FileUncompressWrapper.h  Ray.h  RenderOptions.cpp  RenderOptions.h  Statistics.cpp  bounds.cpp  bounds.h  cie.cpp  cie.h  color.cpp  color.h  cubature.cpp  error.h  errorshared.cpp  mymath.cpp  mymath.h  options.cpp  options.h  rgb.h  spectrum.h  stratification.cpp  stratification.h
src/io/: FileUncompressWrapper.cpp  FileUncompressWrapper.h  writevrml.cpp  writevrml.h
src/material/: BidirectionalScatteringDistributionFunction.cpp  BidirectionalScatteringDistributionFunction.h  Material.cpp  Material.h  PhongBidirectionalReflectanceDistributionFunction.cpp  PhongBidirectionalReflectanceDistributionFunction.h  PhongBidirectionalScatteringDistributionFunction.cpp  PhongBidirectionalScatteringDistributionFunction.h  PhongBidirectionalTransmittanceDistributionFunction.cpp  PhongBidirectionalTransmittanceDistributionFunction.h  PhongEmittanceDistributionFunction.cpp  PhongEmittanceDistributionFunction.h  PhongEmittanceDistributionFunctions.cpp  PhongEmittanceDistributionFunctions.h  RayHit.h  RayHitFlag.h  RefractionIndex.cpp  RefractionIndex.h  SplitBSDFSamplingMode.h  SplitBidirectionalScatteringDistributionFunction.cpp  SplitBidirectionalScatteringDistributionFunction.h  Texture.cpp  Texture.h  brdf.cpp  brdf.h  (+34 more)
(+595 files in other folders)
