cmake_minimum_required(VERSION 3.10)
project(rpk)

if(UNIX AND NOT APPLE)
    add_compile_options(-std=c++11 -Wall -pedantic)
endif()

if(APPLE)
    add_compile_options(-std=c++17 -Wall -pedantic)
    include_directories(/opt/X11/include)
    link_directories(/opt/X11/lib)
endif()

add_compile_options(-ffast-math -O3)

include_directories(src)

set(MAIN_SRC
    src/common/errorshared.cpp
    src/common/mymath.cpp
    src/common/linealAlgebra/Vector3D.cpp
    src/common/linealAlgebra/Matrix4x4.cpp
    src/common/color.cpp
    src/common/options.cpp
    src/common/cie.cpp
    src/common/RenderOptions.cpp
    src/common/dataStructures/CSList.cpp
    src/common/dataStructures/DList.cpp
    src/common/dataStructures/KDTree.cpp
    src/common/dataStructures/List.cpp
    src/common/dataStructures/Bintree.cpp
    src/QMC/halton.cpp
    src/QMC/scrambledhalton.cpp
    src/QMC/nied31.cpp
    src/QMC/faure.cpp
    src/QMC/nied63.cpp
    src/QMC/sobol.cpp
    src/material/texture.cpp
    src/material/brdf.cpp
    src/material/statistics.cpp
    src/material/xxdf.cpp
    src/material/btdf.cpp
    src/material/edf.cpp
    src/material/bsdf.cpp
    src/material/Material.cpp
    src/skin/PatchSet.cpp
    src/skin/hit.cpp
    src/skin/Compound.cpp
    src/skin/geomlist.cpp
    src/skin/Geometry.cpp
    src/skin/Patch.cpp
    src/skin/bounds.cpp
    src/skin/MeshSurface.cpp
    src/skin/hitlist.cpp
    src/skin/Vertex.cpp
    src/skin/Jacobian.cpp
    src/SGL/poly_clip.cpp
    src/SGL/poly_scan_z.cpp
    src/SGL/sgl.cpp
    src/SGL/poly_scan_flat.cpp
    src/scene/spherical.cpp
    src/scene/scene.cpp
    src/scene/splitbsdf.cpp
    src/scene/VoxelGrid.cpp
    src/scene/phong.cpp
    src/scene/Background.cpp
    src/scene/VoxelData.cpp
    src/scene/Camera.cpp
    src/IMAGE/pic.cpp
    src/IMAGE/dkcolor.cpp
    src/IMAGE/imagec.cpp
    src/IMAGE/ppm.cpp
    src/IMAGE/tonemap/lightness.cpp
    src/IMAGE/tonemap/dummy.cpp
    src/IMAGE/tonemap/tonemapping.cpp
    src/IMAGE/tonemap/trwf.cpp
    src/IMAGE/adaptation.cpp
    src/shared/samplegrid.cpp
    src/shared/discretesampling.cpp
    src/shared/lightlist.cpp
    src/shared/shadowcaching.cpp
    src/shared/stratification.cpp
    src/shared/cubature.cpp
    src/io/mgf/readmgf.cpp
    src/io/mgf/object.cpp
    src/io/mgf/lookup.cpp
    src/io/mgf/fileopts.cpp
    src/io/mgf/badarg.cpp
    src/io/mgf/xf.cpp
    src/io/mgf/words.cpp
    src/io/mgf/fvect.cpp
    src/io/mgf/parser.cpp
    src/io/mgf/context.cpp
    src/io/FileUncompressWrapper.cpp
    src/io/writevrml.cpp
    src/render/hemirenderer.cpp
    src/render/potential.cpp
    src/render/SoftIdsWrapper.cpp
    src/render/softids.cpp
    src/render/opengl.cpp
    src/render/renderhook.cpp
    src/render/canvas.cpp
    src/render/rendercommon.cpp
    src/render/bidiroptions.cpp
    src/render/ScreenBuffer.cpp
    src/GALERKIN/basisgalerkin.cpp
    src/GALERKIN/GalerkinRadiosity.cpp
    src/GALERKIN/shaftculling.cpp
    src/GALERKIN/gathering.cpp
    src/GALERKIN/formfactor.cpp
    src/GALERKIN/initiallinking.cpp
    src/GALERKIN/shooting.cpp
    src/GALERKIN/GalerkinElement.cpp
    src/GALERKIN/basistrigalerkin.cpp
    src/GALERKIN/interaction.cpp
    src/GALERKIN/scratch.cpp
    src/GALERKIN/hierefine.cpp
    src/GALERKIN/clustergalerkincpp.cpp
    src/GALERKIN/mrvisibility.cpp
    src/GALERKIN/basisquadgalerkin.cpp
    src/raycasting/common/Raytracer.cpp
    src/raycasting/common/pathnode.cpp
    src/raycasting/common/raytools.cpp
    src/raycasting/common/pixelfilter.cpp
    src/raycasting/simple/RayMatterOptions.cpp
    src/raycasting/simple/RayCaster.cpp
    src/raycasting/simple/RayMatter.cpp
    src/raycasting/raytracing/screeniterate.cpp
    src/raycasting/raytracing/specularsampler.cpp
    src/raycasting/raytracing/spar.cpp
    src/raycasting/raytracing/sampler.cpp
    src/raycasting/raytracing/eyesampler.cpp
    src/raycasting/raytracing/lightsampler.cpp
    src/raycasting/raytracing/densitybuffer.cpp
    src/raycasting/raytracing/lightdirsampler.cpp
    src/raycasting/raytracing/flagchain.cpp
    src/raycasting/raytracing/bipath.cpp
    src/raycasting/raytracing/bsdfsampler.cpp
    src/raycasting/raytracing/BidirectionalPathRaytracer.cpp
    src/raycasting/raytracing/samplertools.cpp
    src/raycasting/raytracing/densitykernel.cpp
    src/raycasting/raytracing/pixelsampler.cpp
    src/PHOTONMAP/photonkdtree.cpp
    src/PHOTONMAP/pmapimportance.cpp
    src/PHOTONMAP/screensampler.cpp
    src/PHOTONMAP/pmapoptions.cpp
    src/PHOTONMAP/photon.cpp
    src/PHOTONMAP/importancemap.cpp
    src/PHOTONMAP/PhotonMapRadiosity.cpp
    src/PHOTONMAP/photonmap.cpp
    src/PHOTONMAP/photonmapsampler.cpp
    src/raycasting/stochasticRaytracing/StochasticRaytracer.cpp
    src/raycasting/stochasticRaytracing/StochasticRaytracerOptions.cpp
    src/raycasting/stochasticRaytracing/elementmcrad.cpp
    src/raycasting/stochasticRaytracing/hierarchy.cpp
    src/raycasting/stochasticRaytracing/StochasticRelaxationRadiosity.cpp
    src/raycasting/stochasticRaytracing/render.cpp
    src/raycasting/stochasticRaytracing/RandomWalkRadiosity.cpp
    src/raycasting/stochasticRaytracing/coefficientsgalerkin.cpp
    src/raycasting/stochasticRaytracing/basismcrad.cpp
    src/raycasting/stochasticRaytracing/basistrimcrad.cpp
    src/raycasting/stochasticRaytracing/ccr.cpp
    src/raycasting/stochasticRaytracing/localline.cpp
    src/raycasting/stochasticRaytracing/stochjacobi.cpp
    src/raycasting/stochasticRaytracing/nondiff.cpp
    src/raycasting/stochasticRaytracing/sample4d.cpp
    src/raycasting/stochasticRaytracing/vrml/vrml.cpp
    src/raycasting/stochasticRaytracing/mcrad.cpp
    src/raycasting/stochasticRaytracing/pushpull.cpp
    src/raycasting/stochasticRaytracing/tracepath.cpp
    src/raycasting/stochasticRaytracing/rtstochasticphotonmap.cpp
    src/raycasting/stochasticRaytracing/hierarchyRefine.cpp
    src/raycasting/stochasticRaytracing/basisquadmcrad.cpp
    src/app/Cluster.cpp
    src/app/radiance.cpp
    src/app/batch.cpp
    src/app/main.cpp)
add_executable(rpk ${MAIN_SRC})

target_link_libraries(rpk GLU GL OSMesa)
