cmake_minimum_required(VERSION 3.10)
project(rpk)

if(UNIX AND NOT APPLE)
    add_compile_options(-std=c++11 -Wall -pedantic)
endif()

if(APPLE)
    add_compile_options(-std=c++17 -Wall -pedantic)
    include_directories(/opt/X11/include)
    link_directories(/opt/X11/lib)
endif()

add_compile_options(-ffast-math -O3)

include_directories(src)

set(MAIN_SRC
    src/common/errorshared.cpp
    src/common/ColorRgb.cpp
    src/common/options.cpp
    src/common/cie.cpp
    src/common/RenderOptions.cpp
    src/common/stratification.cpp
    src/common/Statistics.cpp
    src/common/linealAlgebra/Numeric.cpp
    src/common/linealAlgebra/Matrix2x2.cpp
    src/common/linealAlgebra/Vector3D.cpp
    src/common/linealAlgebra/Matrix4x4.cpp
    src/common/linealAlgebra/Matrix4x4d.cpp
    src/common/linealAlgebra/Vector3Dd.cpp
    src/common/linealAlgebra/CoordinateSystem.cpp
    src/common/linealAlgebra/Jacobian.cpp
    src/common/numericalAnalysis/TriangleCubatureRule.cpp
    src/common/numericalAnalysis/QuadCubatureRule.cpp
    src/common/dataStructures/CircularListBase.cpp
    src/common/dataStructures/CircularListLink.cpp
    src/common/dataStructures/CircularListBaseIterator.cpp
    src/common/dataStructures/KDTree.cpp
    src/common/quasiMonteCarlo/Halton.cpp
    src/common/quasiMonteCarlo/ScrambledHalton.cpp
    src/common/quasiMonteCarlo/Niederreiter31.cpp
    src/common/quasiMonteCarlo/Faure.cpp
    src/common/quasiMonteCarlo/Niederreiter63.cpp
    src/common/quasiMonteCarlo/Sobol.cpp
    src/material/RefractionIndex.cpp
    src/material/Texture.cpp
    src/material/xxdf.cpp
    src/material/PhongEmittanceDistributionFunction.cpp
    src/material/PhongBidirectionalReflectanceDistributionFunction.cpp
    src/material/PhongBidirectionalTransmittanceDistributionFunction.cpp
    src/material/PhongBidirectionalScatteringDistributionFunction.cpp
    src/material/Material.cpp
    src/skin/PatchSet.cpp
    src/skin/RayHit.cpp
    src/skin/Compound.cpp
    src/skin/Geometry.cpp
    src/skin/Patch.cpp
    src/skin/BoundingBox.cpp
    src/skin/MeshSurface.cpp
    src/skin/Vertex.cpp
    src/skin/Element.cpp
    src/SGL/poly_clip.cpp
    src/SGL/poly_scan_z.cpp
    src/SGL/sgl.cpp
    src/SGL/poly_scan_flat.cpp
    src/scene/Background.cpp
    src/scene/Plane.cpp
    src/scene/Camera.cpp
    src/scene/Cluster.cpp
    src/scene/VoxelData.cpp
    src/scene/VoxelGrid.cpp
    src/scene/RadianceMethod.cpp
    src/scene/Scene.cpp
    src/IMAGE/pic.cpp
    src/IMAGE/dkcolor.cpp
    src/IMAGE/imagec.cpp
    src/IMAGE/ppm.cpp
    src/IMAGE/tonemap/lightness.cpp
    src/IMAGE/tonemap/dummy.cpp
    src/IMAGE/tonemap/tonemapping.cpp
    src/IMAGE/tonemap/trwf.cpp
    src/IMAGE/adaptation.cpp
    src/io/mgf/MgfContext.cpp
    src/io/mgf/MgfColorContext.cpp
    src/io/mgf/mgfDefinitions.cpp
    src/io/mgf/mgfGeometry.cpp
    src/io/mgf/mgfHandlerGeometry.cpp
    src/io/mgf/mgfHandlerObject.cpp
    src/io/mgf/lookup.cpp
    src/io/mgf/badarg.cpp
    src/io/mgf/mgfHandlerTransform.cpp
    src/io/mgf/words.cpp
    src/io/mgf/mgfHandlerColor.cpp
    src/io/mgf/mgfHandlerMaterial.cpp
    src/io/mgf/readmgf.cpp
    src/io/FileUncompressWrapper.cpp
    src/io/writevrml.cpp
    src/render/potential.cpp
    src/render/SoftIdsWrapper.cpp
    src/render/softids.cpp
    src/render/opengl.cpp
    src/render/renderhook.cpp
    src/render/canvas.cpp
    src/render/rendercommon.cpp
    src/render/ScreenBuffer.cpp
    src/GALERKIN/GalerkinState.cpp
    src/GALERKIN/basisgalerkin.cpp
    src/GALERKIN/GalerkinRadianceMethod.cpp
    src/GALERKIN/Shaft.cpp
    src/GALERKIN/GalerkinElement.cpp
    src/GALERKIN/basistrigalerkin.cpp
    src/GALERKIN/Interaction.cpp
    src/GALERKIN/basisquadgalerkin.cpp
    src/GALERKIN/ShadowCache.cpp
    src/GALERKIN/processing/ScratchVisibilityStrategy.cpp
    src/GALERKIN/processing/ClusterTraversalStrategy.cpp
    src/GALERKIN/processing/ClusterCreationStrategy.cpp
    src/GALERKIN/processing/FormFactorStrategy.cpp
    src/GALERKIN/processing/FormFactorClusteredStrategy.cpp
    src/GALERKIN/processing/LinkingClusteredStrategy.cpp
    src/GALERKIN/processing/LinkingSimpleStrategy.cpp
    src/GALERKIN/processing/HierarchicalRefinementStrategy.cpp
    src/GALERKIN/processing/GatheringStrategy.cpp
    src/GALERKIN/processing/GatheringSimpleStrategy.cpp
    src/GALERKIN/processing/GatheringClusteredStrategy.cpp
    src/GALERKIN/processing/ShootingStrategy.cpp
    src/raycasting/common/Raytracer.cpp
    src/raycasting/common/pathnode.cpp
    src/raycasting/common/raytools.cpp
    src/raycasting/common/PixelFilter.cpp
    src/raycasting/common/BoxFilter.cpp
    src/raycasting/common/NormalFilter.cpp
    src/raycasting/common/TentFilter.cpp
    src/raycasting/simple/RayCaster.cpp
    src/raycasting/simple/RayMatter.cpp
    src/raycasting/raytracing/bidiroptions.cpp
    src/raycasting/raytracing/screeniterate.cpp
    src/raycasting/raytracing/specularsampler.cpp
    src/raycasting/raytracing/sampler.cpp
    src/raycasting/raytracing/eyesampler.cpp
    src/raycasting/raytracing/densitybuffer.cpp
    src/raycasting/raytracing/bipath.cpp
    src/raycasting/raytracing/bsdfsampler.cpp
    src/raycasting/raytracing/samplertools.cpp
    src/raycasting/raytracing/densitykernel.cpp
    src/raycasting/raytracing/pixelsampler.cpp
    src/raycasting/bidirectionalRaytracing/LightList.cpp
    src/raycasting/bidirectionalRaytracing/LightSampler.cpp
    src/raycasting/bidirectionalRaytracing/LightDirSampler.cpp
    src/raycasting/bidirectionalRaytracing/FlagChain.cpp
    src/raycasting/bidirectionalRaytracing/Spar.cpp
    src/raycasting/bidirectionalRaytracing/BidirectionalPathRaytracer.cpp
    src/PHOTONMAP/samplegrid.cpp
    src/PHOTONMAP/discretesampling.cpp
    src/PHOTONMAP/photonkdtree.cpp
    src/PHOTONMAP/pmapimportance.cpp
    src/PHOTONMAP/screensampler.cpp
    src/PHOTONMAP/pmapoptions.cpp
    src/PHOTONMAP/photon.cpp
    src/PHOTONMAP/importancemap.cpp
    src/PHOTONMAP/PhotonMapRadianceMethod.cpp
    src/PHOTONMAP/photonmap.cpp
    src/PHOTONMAP/photonmapsampler.cpp
    src/raycasting/stochasticRaytracing/StochasticRaytracer.cpp
    src/raycasting/stochasticRaytracing/StochasticRadiosityElement.cpp
    src/raycasting/stochasticRaytracing/hierarchy.cpp
    src/raycasting/stochasticRaytracing/StochasticJacobiRadianceMethod.cpp
    src/raycasting/stochasticRaytracing/render.cpp
    src/raycasting/stochasticRaytracing/RandomWalkRadianceMethod.cpp
    src/raycasting/stochasticRaytracing/coefficientsgalerkin.cpp
    src/raycasting/stochasticRaytracing/basismcrad.cpp
    src/raycasting/stochasticRaytracing/basistrimcrad.cpp
    src/raycasting/stochasticRaytracing/ccr.cpp
    src/raycasting/stochasticRaytracing/localline.cpp
    src/raycasting/stochasticRaytracing/stochjacobi.cpp
    src/raycasting/stochasticRaytracing/nondiff.cpp
    src/raycasting/stochasticRaytracing/sample4d.cpp
    src/raycasting/stochasticRaytracing/mcrad.cpp
    src/raycasting/stochasticRaytracing/tracepath.cpp
    src/raycasting/stochasticRaytracing/rtstochasticphotonmap.cpp
    src/raycasting/stochasticRaytracing/hierarchyRefine.cpp
    src/raycasting/stochasticRaytracing/basisquadmcrad.cpp
    src/app/glutDebugTools.cpp
    src/app/radiance.cpp
    src/app/raytrace.cpp
    src/app/sceneBuilder.cpp
    src/app/batch.cpp
    src/app/commandLine.cpp
    src/app/RpkApplication.cpp
    src/app/main.cpp)
add_executable(rpk ${MAIN_SRC})

target_link_libraries(rpk GLU GL OSMesa glut)
